Added temporal io and ollama
